--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ multihash = {version = "0.13.2", default-features = false}
 num-bigint = {version = "0.3", default-features = false}
 nom = {version = "6", default-features = false}
 base-x = {version = "0.2.8", default-features = false}
+multibase = {git = "https://github.com/yatima-inc/rust-multibase"}
+nom_locate = {git = "https://github.com/yatima-inc/nom_locate"}
 
 [dev-dependencies]
 quickcheck = {version = "1.0.3", default-features = false}
